--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,35 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
-    <TextView
+    <Button
+            android:text="Add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/btnAdd"
+            android:layout_marginEnd="161dp"
+            android:layout_marginRight="161dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="162dp"
+            android:layout_marginStart="162dp"
+            android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/textinput"
+            android:layout_marginBottom="31dp" app:layout_constraintBottom_toTopOf="@+id/textDisplay"/>
+    <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
+            android:inputType="textPersonName"
+            android:text="Text..."
+            android:ems="10"
+            android:id="@+id/textinput"
+            android:layout_marginEnd="97dp" android:layout_marginRight="97dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="101dp" android:layout_marginStart="101dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="165dp"
+            android:layout_marginBottom="34dp" app:layout_constraintBottom_toTopOf="@+id/btnAdd"/>
+    <TextView
+            android:layout_width="195dp"
+            android:layout_height="104dp" android:id="@+id/textDisplay"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="111dp"
+            android:layout_marginStart="111dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="294dp" android:layout_marginEnd="105dp" android:layout_marginRight="105dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="31dp" app:layout_constraintTop_toBottomOf="@+id/btnAdd"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
